# dlordinal

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.binder/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_improvement.yml  feature_request.yml  other_issue.yml
.github/scripts/: check_version_consistency.py  check_version_consistency_release.py
.github/workflows/: actions.yml  fast_release.yml  pr_precommit.yml  release.yml  run_tests.yml  tutorials.yml
build_tools/: run_skorch_tutorials.sh  run_tutorials.sh
changelog_versions/: version_2-3-0.md  version_2-3-1.md  version_2-3-2.md  version_2-4-0.md  version_2-4-1.md  version_2-4-2.md  version_2-4-3.md  version_2-4-4.md  version_2-5-0.md  version_2-5-1.md  version_2-6-0.md
dlordinal/: __init__.py  conftest.py
dlordinal/dataset/: __init__.py
dlordinal/datasets/: __init__.py  adience.py  featuredataset.py  fgnet.py  hci.py
dlordinal/distributions/: __init__.py  beta_distribution.py  binomial_distribution.py  distributions.py  exponential_distribution.py  general_triangular_distribution.py  poisson_distribution.py  triangular_distribution.py  utils.py
dlordinal/dropout/: __init__.py  hybrid_dropout.py
dlordinal/estimator/: __init__.py  pytorch_estimator.py
dlordinal/layers/: __init__.py  activation_function.py  clm.py  ordinal_fully_connected.py  ordinalfullyconnected.py  stick_breaking_layer.py  stick_breaking_layers.py
dlordinal/losses/: __init__.py  beta_loss.py  binomial_loss.py  cdw.py  corn_loss.py  custom_targets_loss.py  emd_loss.py  exponential_loss.py  gaussian_uncertainty_loss_wrapper.py  general_triangular_loss.py  geometric_loss.py  logistic_at_loss.py  losses.py  mceloss.py  mcewkloss.py  poisson_loss.py  (+5 more)
docs/: api.rst  conf.py  datasets.rst  distributions.rst  dropout.rst  index.rst  layers.rst  losses.rst  metrics.rst  models.rst  output_layers.rst  references.bib  sklearn_integration.rst  soft_labelling.rst  wrappers.rst
tutorials/: adience_tutorial.ipynb  copoc_tutorial.ipynb  corn_skorch_tutorial.ipynb  datasets_tutorial.ipynb  dlordinal_with_skorch_tutorial.ipynb  dropout_tutorial.ipynb  ecoc_tutorial.ipynb  estimator_tutorial.ipynb  fgnet_tutorial.ipynb  hci_tutorial.ipynb  hybrid_dropout_tutorial.ipynb  losses_tutorial.ipynb  losses_with_skorch_tutorial.ipynb  stick_breaking_tutorial.ipynb
(+115 files in other folders)
