[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dlordinal"
version = "0.1.0"
authors = [
    {name = "Francisco Bérchez", email = "i72bemof@uco.es"},
    {name = "Víctor Vargas", email = "vvargas@uco.es"},
]
description = "Deep learning for ordinal classification"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Universidad de Córdoba"}
dependencies = [
    "scikit-learn==1.*",
    "numpy>=1.21,==1.*",
    "torch==2.*",
    "torchvision>=0.13",
    "pandas>=1",
    "scipy>=1.7",
    "matplotlib>=3.1",
    "seaborn>=0.12",
    "scikit-image>=0.18",
    "tqdm>=4",
    "Pillow>=8",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[tool.setuptools.packages.find]
include = ["dlordinal.*"]
exclude = ["*.tests"]
namespaces = false

[tool.ruff]
fix = true

[tool.black]
line-length = 88
target-version = ['py38']
experimental-string-processing = true
