[build-system]
requires = ["setuptools>=61.0", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dlordinal"
version = "2.1.0"
authors = [
    {name = "Francisco Bérchez-Moreno", email = "i72bemof@uco.es"},
    {name = "Víctor Manuel Vargas", email = "vvargas@uco.es"},
    {name = "Javier Barbero-Gómez", email = "jbarbero@uco.es"},
]
description = "Deep learning for ordinal classification"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn==1.*",
    "numpy>=1.21,==1.*",
    "torch==2.*",
    "torchvision>=0.13",
    "pandas>=1",
    "scipy>=1.7",
    "scikit-image>=0.18",
    "tqdm>=4",
    "Pillow>=8",
]

[project.urls]
Source = "https://github.com/ayrna/dlordinal"
Documentation = "https://dlordinal.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]
docs = ["sphinx", "sphinxcontrib-bibtex", "sphinx-rtd-theme"]

[tool.setuptools.packages.find]
include = ["dlordinal", "dlordinal.*"]
exclude = ["*.tests"]
namespaces = false

[tool.ruff]
fix = true

[tool.black]
line-length = 88
target-version = ['py38']
experimental-string-processing = true
